[gd_scene load_steps=8 format=3 uid="uid://cujdef7evnrlh"]

[ext_resource type="Script" path="res://ItemManager.gd" id="1_1voyt"]
[ext_resource type="Script" path="res://GameplayManager.gd" id="1_bwqjh"]
[ext_resource type="Script" path="res://ShootOtherScript.gd" id="2_00epn"]
[ext_resource type="Script" path="res://ShootSelfScript.gd" id="3_b73ex"]
[ext_resource type="Script" path="res://HealthIndicatorScript.gd" id="3_mi1t4"]
[ext_resource type="Script" path="res://ShellIndicatorScript.gd" id="6_cuhb1"]
[ext_resource type="Script" path="res://LastShellIndicatorScript.gd" id="7_a13n1"]

[node name="Gameplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwqjh")

[node name="ShootOptions" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 203.0
offset_top = 173.0
offset_right = 339.0
offset_bottom = 239.0

[node name="ShootOtherButton" type="Button" parent="ShootOptions"]
layout_mode = 2
text = "Shoot Opponent"
script = ExtResource("2_00epn")

[node name="ShootSelfButton" type="Button" parent="ShootOptions"]
layout_mode = 2
text = "Shoot Self"
script = ExtResource("3_b73ex")

[node name="InventoryBackground" type="Panel" parent="."]
layout_mode = 0
offset_left = 188.0
offset_top = 334.0
offset_right = 388.0
offset_bottom = 434.0

[node name="Inventory" type="GridContainer" parent="InventoryBackground"]
layout_mode = 2
offset_right = 200.0
offset_bottom = 100.0
script = ExtResource("1_1voyt")

[node name="HealthIndicators" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 22.0
offset_top = 182.0
offset_right = 158.0
offset_bottom = 228.0
text = "Your health:
Enemy health:"
fit_content = true
autowrap_mode = 0
script = ExtResource("3_mi1t4")

[node name="ShellIndicator" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 140.0
offset_top = 70.0
offset_right = 141.0
offset_bottom = 116.0
script = ExtResource("6_cuhb1")

[node name="LastShellIndicator" type="ColorRect" parent="."]
layout_mode = 2
offset_top = 120.0
offset_right = 136.0
offset_bottom = 120.0
script = ExtResource("7_a13n1")

[connection signal="display_shell" from="." to="LastShellIndicator" method="_on_gameplay_display_shell"]
[connection signal="new_round" from="." to="InventoryBackground/Inventory" method="_on_gameplay_new_round"]
[connection signal="new_round" from="." to="ShellIndicator" method="_on_gameplay_new_round"]
[connection signal="new_stage" from="." to="InventoryBackground/Inventory" method="_on_gameplay_new_stage"]
[connection signal="new_stage" from="." to="HealthIndicators" method="_on_gameplay_new_stage"]
[connection signal="player_shoot_other" from="ShootOptions/ShootOtherButton" to="." method="_on_shoot_other_button_player_shoot_other"]
[connection signal="player_shoot_self" from="ShootOptions/ShootSelfButton" to="." method="_on_shoot_self_button_player_shoot_self"]
[connection signal="use_beer" from="InventoryBackground/Inventory" to="." method="_on_inventory_use_beer"]
[connection signal="use_cigs" from="InventoryBackground/Inventory" to="." method="_on_inventory_use_cigs"]
[connection signal="use_glass" from="InventoryBackground/Inventory" to="." method="_on_inventory_use_glass"]
[connection signal="use_saw" from="InventoryBackground/Inventory" to="." method="_on_inventory_use_saw"]
